force-app/main/default/objects/ccrz__E_Promo__c/ccrz__E_Promo__c.object-meta.xml
<CustomObject>
    <description>The E_Promotion__c object contains promotion related data.</description>
    <label>CC Promotion</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Promotions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>