force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__Coupon__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NOT CURRENTLY USED.</description>
    <label>Coupon</label>
    <referenceTo>ccrz__E_Coupon__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>