force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__Enabled__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True if this promotion is enabled and will be displayed.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>