force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__ExternalLink__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ExternalLink__c</fullName>
    <description>When set AND Link Type is set to URL then clicking this promotion will redirect to the given URL.</description>
    <label>External Link</label>
    <type>Url</type>
</CustomField>