force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__ImageURI__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ImageURI__c</fullName>
    <description>The URI of the image. If ImageSource__c is URI then this is the href pointing to the image. If ImageSource__c is Static Resource then this is a relative reference inside the indicated Static Resource.</description>
    <label>Image URI</label>
    <length>128</length>
    <type>Text</type>
</CustomField>