force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__LocationType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LocationType__c</fullName>
    <description>One of Banner, Left Nav, Right Nav, Splash, Splash Phone, or Mobile. Controls the location within a page of the promotion.</description>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Left Nav</fullName>
            </value>
            <value>
                <fullName>Right Nav</fullName>
            </value>
            <value>
                <fullName>Splash</fullName>
            </value>
            <value>
                <fullName>Splash Phone</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>