force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__NewWindow__c.field-meta.xml
<CustomField>
    <fullName>ccrz__NewWindow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Open link in a new window if checked. Otherwise, open in the same window.</description>
    <label>New Window</label>
    <type>Checkbox</type>
</CustomField>