force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__NewWindowProperty__c.field-meta.xml
<CustomField>
    <fullName>ccrz__NewWindowProperty__c</fullName>
    <description>NOT CURRENTLY USED.</description>
    <label>New Window Property</label>
    <type>TextArea</type>
</CustomField>