force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__PageLocation__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PageLocation__c</fullName>
    <description>One of Landing Page, Product Detail, Shopping Cart, Order Review, Order Confirmation, Product List Page, Category Landing Page, All Pages. Indicates on which page the promotion should appear.</description>
    <label>Page Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>Product Detail</fullName>
            </value>
            <value>
                <fullName>Shopping Cart</fullName>
            </value>
            <value>
                <fullName>Order Review</fullName>
            </value>
            <value>
                <fullName>Order Confirmation</fullName>
            </value>
            <value>
                <fullName>Product List Page</fullName>
            </value>
            <value>
                <fullName>Category Landing Page</fullName>
            </value>
            <value>
                <fullName>All Pages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>