force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__ProductRelated__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductRelated__c</fullName>
    <formula>IF( ccrz__Product__c  != null, &apos;true&apos;, &apos;false&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Related</label>
    <type>Text</type>
</CustomField>