force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__PromoId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PromoId__c</fullName>
    <description>External Id for E_Promo__c used in data export/import</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id for E_Promo__c used in data export/import</inlineHelpText>
    <label>Promotion Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>