force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__Script__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Script__c</fullName>
    <description>HTML Script(NOT CURRENTLY USED)</description>
    <label>Script</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>