force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__Sequence__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Sequence__c</fullName>
    <description>Display order of the promotion within a group of promotions.</description>
    <label>Location Display Sequence</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>