force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__ShortDesc__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShortDesc__c</fullName>
    <description>Short Description(NOT CURRENTLY USED)</description>
    <label>Short Desc</label>
    <type>TextArea</type>
</CustomField>