force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__StartDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The date before which the promotion will not be displayed.</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>