force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__StaticResource__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StaticResource__c</fullName>
    <description>The name of the Static Resource that the image is kept within if ImageSource__c is Static Resource.</description>
    <inlineHelpText>1. Use prefix &quot;c__&quot; for static resource defined in subscriber org
2. StaticResource without prefix refers to static resource inside managed package</inlineHelpText>
    <label>StaticResource</label>
    <length>80</length>
    <type>Text</type>
</CustomField>