force-app/main/default/objects/ccrz__E_Promo__c/fields/ccrz__StorefrontMS__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StorefrontMS__c</fullName>
    <description>The Storefront(s) that the image will be displayed on.</description>
    <label>Storefront</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DefaultStore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>