force-app/main/default/objects/ccrz__E_Promo__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>NAME</columns>
    <columns>ccrz__Product__c</columns>
    <columns>ccrz__StaticResource__c</columns>
    <columns>ccrz__PageLocation__c</columns>
    <columns>ccrz__ImageSource__c</columns>
    <columns>ccrz__LocationType__c</columns>
    <columns>ccrz__Enabled__c</columns>
    <columns>ccrz__Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>