force-app/main/default/objects/ccrz__E_Promo__c/listViews/ccrz__CloudBurst.listView-meta.xml
<ListView>
    <fullName>ccrz__CloudBurst</fullName>
    <columns>NAME</columns>
    <columns>ccrz__PageLocation__c</columns>
    <columns>ccrz__LocationType__c</columns>
    <columns>ccrz__Sequence__c</columns>
    <columns>ccrz__StaticResource__c</columns>
    <columns>ccrz__Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>CloudBurst</value>
    </filters>
    <label>CloudBurst</label>
</ListView>