force-app/main/default/objects/ccrz__E_Promo__c/listViews/ccrz__Landing_Page.listView-meta.xml
<ListView>
    <fullName>ccrz__Landing_Page</fullName>
    <columns>NAME</columns>
    <columns>ccrz__LocationType__c</columns>
    <columns>ccrz__ImageSource__c</columns>
    <columns>ccrz__StaticResource__c</columns>
    <columns>ccrz__ImageURI__c</columns>
    <columns>ccrz__Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ccrz__PageLocation__c</field>
        <operation>equals</operation>
        <value>Landing Page</value>
    </filters>
    <label>Landing Page</label>
</ListView>